10680
Can anyone recommend a good beginner book for learning Scala?

{code}
Welcome to Scala 2.12.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_111).
Type in expressions for evaluation. Or try :help.

scala> List(1,3,5).map("abc".isDefinedAt)
res0: List[Boolean] = List(true, false, false)

scala> List(1,3,5).map("abc".isDefinedAt _)
<console>:12: error: _ must follow method; cannot follow Int => Boolean
       List(1,3,5).map("abc".isDefinedAt _)
                             ^

scala> List(1,3,5).map("abc".isDefinedAt(_))
res2: List[Boolean] = List(true, false, false)

{code}
